<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/LogoTela"
        android:layout_width="278dp"
        android:layout_height="251dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/mark" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/rosa_pastel"
        android:ems="10"
        android:hint="E-mail ou CPF"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:text="" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/rosa_pastel"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:text="" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="19dp"
        android:text="@string/esqSenha"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#55B859"
        android:text="@string/ent"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_margin="15dp"
        android:background="@color/rosa_pastel"
        android:hint="@string/hint2"
        android:padding="17dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.126" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Começar sem login >"
            android:textColor="#514C4C"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.157" />

    </android.support.constraint.ConstraintLayout>




</LinearLayout>